--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interview-pr",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Create repository with PR and invite person to review it",
   "main": "lib.js",
   "bin": {
@@ -13,7 +13,10 @@
   },
   "repository": "https://github.com/SilentImp/interview-pr",
   "keywords": [],
-  "files": ["utils.js", "lib.js"],
+  "files": [
+    "utils.js",
+    "lib.js"
+  ],
   "author": "Anton Nemtsev <newsilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
