--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interview-pr",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Create repository with PR and invite person to review it",
   "main": "lib.js",
   "bin": {
@@ -16,7 +16,8 @@
   "files": [
     "utils.js",
     "lib.js",
-    "description.md"
+    "descriptions/react.md",
+    "descriptions/webapp.md"
   ],
   "author": "Anton Nemtsev <newsilentimp@gmail.com>",
   "license": "ISC",
